# fashion-image-classifier

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.streamlit/: config.toml
dashboard/dashboard/: settings.py
fashion_dashboard/: fashion_dashboard.py
fashion_image_classifier/: feature_extraction.py  image_labeling.py  label_images.py
prototypes/: image_classifier_prototype.ipynb  svc_hpt_log.json
scripts/: elasticnet_hpt_log.json  evaluate.py  image_classifier_prototype.ipynb  image_labeling.ipynb  prepare.py  ridge_hpt_log.json  svc_hpt_log.json  train.py
sourcing/: scrapy.cfg
sourcing/sourcing/: items.py  middlewares.py  pipelines.py  settings.py
sourcing/sourcing/spiders/: zalando_crawler.py
tests/: feature_extraction_test.py  image_labeling_test.py  label_images_test.py  test_fashion_image_classifier.py
workdir/: .gitignore  docker-compose.yml
