[tool.poetry]
name = "fashion-image-classifier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.4.1"
scrapy-splash = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.20.0"
mypy = "^0.800"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
